Release 1.3-SNAPSHOT
* History buffer numbers are now numbered oldest to newest, so that 
  the buffer number for a given buffer will not change until the 
  session ends or the buffer is removed from history.

Release 1.2
* Added new mechanism to \connect to allow a logical name to be assigned
  to a connection and persistently saved away so that the connection
  can be re-established in the future using only the name. This provides
  a cleaner mechanism for managing connections than the 'alias' command.
  Run  "\help connect" for more details.
* Added session-to-session redirection, allowing the output of a 
  command executed in one session to be executed by another session
  (or even re-executed by itself).  See '\help redirection' for details.
* The \call command can now iterate through a CSV file and execute a
  prepared statement once for each line in the file, using the fields
  in the file as arguments to the procedure.
* Fixed handling of "bit" datatypes.
* Fixed ^C handling that I broke the last release.
* Fixed the \eval command aborting when it executes a command that
  causes a session switch, such as \session or \connect -n.
* Fixed "\connect -c" not finding classes that are specified in the
  ${classpath} jsqsh variable.
* Fixed OutOfMemoryError when processing the results of a backtick
  expression (e.g. \set x=`echo 1234`)

Release 1.1
* Changed several aspects of command line options:
     - All jsqsh options have a long form and a short form 
       (e.g. -h and --help).
     - You no longer need a space following an option (e.g. 
       "-U sa" and "-Usa" are equivalent).
     - Every jsqsh command accepts -h and --help to cause a usage
       of the command to be dumped.
     - Every jsqsh command accepts -g and --gui to cause its output
       to be sent to a graphical popup window.
     - The new help topic "options" discusses this.
* Added new display style "graphical" that will pop open a GUI window